--- a/styles/main.css
+++ b/styles/main.css
@@ -7,11 +7,6 @@ body {
 
 }
 
-head {
-	font-family: arial;
-}
-
-
 h1{
 	color: black;
 }
@@ -21,41 +16,42 @@ a {
 }
 
 li {
-	color:#555;
+	color:#000555;
 }
 
-body {
-	margin: 0;
+div	{
+	width: 70%;
+	margin: 5px auto;
 }
+
 header {
 	background: #A1D490;
-	color: white;
+	font-color: white;
 	padding:33px 15px ;
 }
 
 
 nav ul {
-	margin:0;
+	margin: 0;
 	display: inline;
 }
 
 nav ul li {
-	color:white;
+	color: white;
 	list-style-type: none;
 	display: inline-block;
 	background: black;
-	padding:5px 10px;
+	padding: 5px 10px;
 	float: left;
 	font-size: 25;
 }
 
 nav ul li a {
-	color:white;
+	color: white;
 }
 
 
 footer {
-	font-variant: timesnewroman;
 	color: White;
 	background: #90C3D4;
 }
