--- a/styles/main.css
+++ b/styles/main.css
@@ -27,7 +27,10 @@ div	{
 
 div .post {
 	width: 95%;
-	background-color: grey;
+	background-color: #DAE0E0;
+	color: black;
+	text-align: center;
+	padding: 3px;
 }
 
 .post img {
@@ -36,10 +39,10 @@ div .post {
 }
 
 header {
-	background: #A1D490;
+	background: #26A3F0;
 	font-color: white;
 	padding:33px 16px ;
-	max-height: 15rem;
+	max-height: 15rem; 
 }
 
 header :hover {
