--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,10 @@ h1{
 	font-size: 4rem;
 }
 
+h2{
+	font-size: 3rem;
+}
+
 a {
 	color:green;
 }
@@ -36,6 +40,7 @@ div .post {
 .post img {
 	width: 95%;
 	left: 50%;
+	max-width: 600px;
 }
 
 header {
